# string-schema

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md  advanced-usage.md  api-reference.md  examples.md  faq.md  getting-started.md  pydantic-utilities.md  string-syntax.md  troubleshooting.md
examples/: demo.py  pydantic_utility_demo.py
orignal_code/: sample.py  simple_schema.py  string_schema.py
simple_schema/: __init__.py  utilities.py
simple_schema/core/: validators.py
simple_schema/examples/: presets.py  recipes.py
simple_schema/integrations/: json_schema.py  openapi.py  pydantic.py
simple_schema/parsing/: string_parser.py  syntax.py
string_schema/: __init__.py  utilities.py
string_schema/core/: __init__.py  builders.py  fields.py
string_schema/examples/: __init__.py
string_schema/integrations/: __init__.py  openapi.py  pydantic.py  reverse.py
string_schema/parsing/: __init__.py  optimizer.py  string_parser.py  syntax.py
tests/: __init__.py  test_conversion_matrix.py  test_core.py  test_examples.py  test_integrations.py  test_parsing.py  test_timezone_handling.py  test_utilities.py
